--- a/thesis.tex
+++ b/thesis.tex
@@ -229,13 +229,24 @@ Wörtliche Zitate, die sich über mind. drei Textzeilen erstrecken, sind mit der
 
 
 %---------------------------------------------------------------------%
-%------------------------------ Theoretical Background ---------------%
+%------------------------------ Methodology --------------------------%
 %---------------------------------------------------------------------%
+\chapter{Methodology}
+
+%---------------------------------------------------------------------%
+%------------------------------ Results ------------------------------%
+%---------------------------------------------------------------------%
+\chapter{Results}
+
+%---------------------------------------------------------------------%
+%------------------------------ Discussion ---------------------------%
+%---------------------------------------------------------------------%
+\chapter{Discussion}
 
 %---------------------------------------------------------------------%
 %---------------------------- Conclusion -----------------------------%
 %---------------------------------------------------------------------%
-\chapter{Zusammenfassung und Fazit}
+\chapter{Conclusion}
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 \section{Blindtext Überschrift Ebene 2 Blindheit per Definition}
 Mit Blindheit per Definition geschlagen, dennoch nicht unsichtbar, präsentiere ich mich als unbeachtetes und ungeliebtes Stiefkind zeitgenössischer Literatur. Meine Bestimmung liegt - wie ich selbst - in engen Grenzen und ist rein platzhalterischer Natur. Kann ein missbrauchtes Wortgefüge eigentlich noch Schlimmeres erleiden, als als Blindtext erdacht und vor der Öffentlichkeit versteckt zu werden?
