Add section about IS success

--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,21 @@
   year={2010},
   publisher={IEEE}
 }
+
+@article{DeloneMcLean2003ISSuccessTenYearUpdate,
+    author = {Delone, McLean},
+    title = {The DeLone and McLean Model of Information Systems Success: A Ten-Year Update},
+    journal = {Journal of Management Information Systems},
+    year = {2003}
+}
+
+@article{Davis1989MISQ,
+  author = {Davis, Fred D.},
+  title = {Perceived Usefulness, Perceived Ease of Use, and User Acceptance of Information Technology},
+  journal = {MIS Quarterly},
+  volume = {13},
+  number = {3},
+  pages = {319--340},
+  year = {1989},
+  publisher = {Management Information Systems Research Center, University of Minnesota}
+}
