--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 %%
 
 \documentclass[
-	ngerman,
+	english,
 	ruledheaders=section,%Ebene bis zu der die Überschriften mit Linien abgetrennt werden, vgl. DEMO-TUDaPub
 	class=report,% Basisdokumentenklasse. Wählt die Korrespondierende KOMA-Script Klasse
 	thesis={type=bachelor},% Dokumententyp Thesis, für Dissertationen siehe die Demo-Datei DEMO-TUDaPhd
@@ -43,6 +43,7 @@
 	DIV=14,
 %	logofile=example-image, %Falls die Logo Dateien nicht vorliegen
 ]{tudapub}
+\usepackage{datetime2}
 
 
 % Der folgende Block ist nur bei pdfTeX auf Versionen vor April 2018 notwendig
@@ -64,7 +65,7 @@
 %Literaturverzeichnis
 %%%%%%%%%%%%%%%%%%%
 \usepackage[style=authoryear-ibid,backend=biber]{biblatex}   % Literaturverzeichnis
-\DeclareLanguageMapping{ngerman}{ngerman-apa}
+\DeclareLanguageMapping{english}{english-apa}
 \bibliography{references}
 \AtBeginBibliography{\setcounter{maxnames}{10}} % Im Literaturverzeichnis nenne mehr als 2 Autoren
 \counterwithout{footnote}{chapter} % Zähle Fußnoten über gesamtes Dokument hoch
@@ -111,13 +112,13 @@
 \begin{document}
 
 \Metadata{
-	title=Auto-Generated User Intent- and Satisfaction Insights in Enterprise-GenAI Applications,
+	title=Automatic evaluation of Enterprise-GenAI Applications success,
 	author=Marcel Pfeiffer
 }
 
 \pagenumbering{gobble}
 
-\title{Auto-Generated User Intent- and Satisfaction Insights in Enterprise-GenAI Applications}
+\title{Automatic evaluation of Enterprise-GenAI Applications success}
 
 \studentID{2912332}
 \author[M. Pfeiffer]{Marcel Pfeiffer}%optionales Argument ist die Signatur,
@@ -176,7 +177,8 @@ Der Abstract fasst den Inhalt der Abschlussarbeit auf maximal einer halben Seite
 
 \begin{xtabular}{ll}
 IS					&	Information Systems\\
-TUD						&	Technische Universität Darmstadt\\
+TUD					&	Technische Universität Darmstadt\\
+KMS                 &   Knowledge Management Systems \\
 
 \end{xtabular} 
 
@@ -223,20 +225,48 @@ Wörtliche Zitate, die sich über mind. drei Textzeilen erstrecken, sind mit der
 %------------------------------ Theoretical Background ---------------%
 %---------------------------------------------------------------------%
 \chapter{Theoretical Background}
-\section{User Satisfaction in IS}
-\section{User Satisfaction in Knowledge Management Systems}
-
-
+In order to gain a deeper understanding of what determines the success of an enterprise Gen-AI system, we will first look at the success of IS in general. Afterwards, we will dive deeper into the context of KMS and specifically enterprise GenAI systems and apply the more general theories to them. This will help us define and categorize the software features we are going to implement out during our artifact development.
+\section{Technology acceptance and IS success}
+To better understand the success of IS we will have a look at two models. The IS success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} focuses on the success of an IS in an organizational context, whereas the technology acceptance model (TAM) deals with the question, which determinants lead to the acceptance and use of an IS by a single user.
+\begin{figure}[h!]
+    \includegraphics[width=1\linewidth]{images/TAM.png}
+    \caption{Technology acceptance model}
+    \label{fig:enter-label}
+\end{figure}
+\\
+Looking at the TAM there are two determinants that influence the use of an IS - the \textit{perceived usefulness} (PU) and the \textit{perceived ease of use} (PEU). The PU describes the degree to which a person believes that using a particular system would provide some use for her or him \parencite{Davis1989MISQ}. In an enterprise context this usually means the conviction that the use of the IS has a beneficial influence on the own job performance. The second determinant, the \textit{perceived ease of use} (PEU), refers to "the degree to which a person believes that using a particular system would be free of effort" \parencite[p.~320]{Davis1989MISQ}. This idea relates to the user's assessment of the mental effort required to learn and operate the system. If a system is intuitive, straightforward and does not require extensive training to use, it will be perceived as easy to use.\\ A crucial aspect of the TAM is the relationship between these two determinants. Davis argues that the PEU has a direct, positive influence on the PU. A system that is easier to use is also perceived as more useful, partly because the user can invest less effort in the mechanics of using the system and more in the actual task at hand. Both PU and PEU then influence the user's \textit{attitude toward using} the system, which in turn shapes the \textit{behavioral intention to use} and ultimately leads to the \textit{actual system use}.However, it is important to note that a consistent finding in TAM research is that PU has a significantly stronger influence on usage intention and actual use than PEU \parencite{Davis1989MISQ}. While ease of use is important, the ultimate driver for acceptance is the user's belief that the system will help them perform their job better.\\
+\\
+Now that we know which factors lead to the use of an IS by a single person, we will shift our perspective to the factors that determine its use and overall success within an organizational context.
+Following DeLone and McLean \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} there are 6 interrelated factors that determine the success of an IS in an organizational context: \textit{system quality, information quality, service quality, intention to use and actual system use, user satisfaction and the net benefits} of the IS.\\
+\begin{figure}[h!]
+    \includegraphics[width=1\linewidth]{images/ISSuccess.png}
+    \caption{IS Success Model}
+    \label{fig:enter-label}
+\end{figure}
+\\
+\textit{System quality} means the quality of the IS in terms of technical performance. Typical measures for system quality would be, for example, response time, reliability, ease of use, or hardware utilization.\\
+\textit{Information quality} refers to the quality of the information provided by the IS. This includes, for example, the usefulness, timeliness, precision, completeness, and relevance of the information provided by the system.\\
+\textit{Service quality} means the quality of the support that users receive from the IS department or service provider. It became an important success dimension with the rise of end-user computing, where the IS function provides services in addition to products. This dimension is often measured by the support staff's responsiveness, assurance, and empathy.
+\\
+These three aspects of the quality of an information system directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction}. If an IS provides a high quality the users of that system are likely going to use it more often and will feel more satisfied with the use. User satisfaction and Intention to use \& actual use are interrelated as well since the condition for user satisfaction is the use of the IS and a high (low) user satisfaction with the IS leads to a more (less) frequent use of it.\\
+\section{Knowledge Management Systems success}
+\section{Enterprise GenAI Systems}
 
 %---------------------------------------------------------------------%
 %------------------------------ Methodology --------------------------%
 %---------------------------------------------------------------------%
 \chapter{Methodology}
-
+\textbf{Problem Identification and Motivation}\\
+\textbf{Define Objectives of Artifacts}\\
+\textbf{Development of Artifacts}\\
+\textbf{Demonstration and Evaluation}\\
 %---------------------------------------------------------------------%
 %------------------------------ Results ------------------------------%
 %---------------------------------------------------------------------%
 \chapter{Results}
+\section{Identified software features}
+\section{Description of the created software features}
+\section{Customers feedback}
 
 %---------------------------------------------------------------------%
 %------------------------------ Discussion ---------------------------%
